--- a/BearApplication/Bear Base App.xctemplate/Podfile
+++ b/BearApplication/Bear Base App.xctemplate/Podfile
@@ -1,11 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
-target 'BiZhi' do
-    
-    pod 'SDWebImage'
-    pod 'MJExtension'
-    pod 'MJRefresh'
+target '___PROJECTNAME___' do
     
     pod 'BearSkill', :git => 'https://github.com/BearRan/BearSkill.git', :commit => 'd86df28'
     #  pod 'BearSkill', :path => '../BearSkill/'
